# ChangeTracker

./: .gitignore  README.md  README_DEV.md  pyproject.toml
changetracker/: core.py
tests/: test.py  test_auto_tracking.py
trackchanges/: __init__.py  core.py  pyproject.toml
